# CI-CD-Deployment-Pipeline

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  docker-compose.yml  healthcheck.sh  pyproject.toml  requirements.txt
app/: app.py  pyproject.toml
