[project]
name = "cicd"
version = "0.1.0"
description = ""
authors = [
    {name = "R3dRum92",email = "tksadik92@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
